# schematic_converter

./: .gitignore  Cargo.toml  readme.md
benches/: conversion_benchmarks.rs
src/: lib.rs
src/converters/: litematic.rs  mod.rs  schem.rs  schematic.rs
tests/: integration_tests.rs  litematic_schematic_tests.rs  schem_schematic_test.rs
tests/outputs/: big_quarry.schem  bulk.schem  quary.schem  sample.schem  test_coordinate_thingy.schem
tests/test_schematics/: big_quarry.litematic  bulk.litematic  quary.litematic  sample.litematic  sample.schem  test_coordinate_thingy.litematic
wasm-test/: README.md  build-wasm.sh  bun.lockb  index.html  index.js  package.json  schematic_converter.js  schematic_converter_bg.wasm  server.js
