[package]
name = "schematic_converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quartz_nbt = "0.2.9"
flate2 = "1.0.31"
log = "0.4.22"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "conversion_benchmarks"
harness = false